<resources>
    <string name="app_name">寻味</string>

    <string name="GaoDeWebServiceKey">51483941503f9b9a6f537cd30df868d9</string>

    <!--item_card-->
    <string name="test">this is test!</string>

    <!--menu_nav-->
    <string name="nav_personal">个人专页</string>
    <string name="nav_location">this is location</string>
    <string name="nav_username">username user</string>

    <!--menu_toolbar-->
    <string name="settings">Settings</string>

    <!--item_tab-->
    <string name="tab_Home">首页</string>
    <string name="tab_Near">附近</string>
    <string name="tab_Community">社群</string>
    <string name="tab_Me">我</string>

    <!--fragment_home-->
    <string name="latest">最新发布</string>
    <string name="popular_nearby">附近热门</string>
    <string name="rank_week">本周排行</string>
    <string name="rank_mouth">本月排行</string>

    <!--fragment_home_tabs-->
    <string-array name="tabs_home">
        <item>最新发布</item>
        <item>附近热门</item>
        <item>本周排行</item>
        <item>本月排行</item>
    </string-array>
    <string name="title_activity_rich_text">RichTextActivity</string>
    <string name="title_activity_rich_text_test">RichTextTestActivity</string>
    <string name="title_activity_comment_test">CommentTestActivity</string>

    <!--评论详情页面 标题-->
    <string name="reply_details_title">评论详情</string>
    <string name="reply_details_allReply">全部回复:</string>

    <!--dialog_comment-->
    <string name="dialog_comment_reply">回复评论</string>
    <string name="dialog_comment_share">分享评论</string>
    <string name="dialog_comment_copy">复制评论</string>
    <string name="dialog_comment_report">举报评论</string>

    <!--评论输入框-->
    <string name="comment_input">说点什么吧...</string>
    <string name="comment_send">发送</string>
    <string name="title_activity_settings">Settings</string>

    <!--delicacy_bottom_toolbar-->
    <string name="delicacy_bottom_toolbar_collection">收藏美食</string>
    <string name="delicacy_bottom_toolbar_comment">发布评论</string>
    <string name="delicacy_bottom_toolbar_recommend">推荐美食</string>
    <string name="delicacy_bottom_toolbar_share">分享美食</string>

    <!--PersonActivity start-->
    <string name="person_activity_toolbar_title">个人专页</string>
    <!--PersonActivity end-->

    <!--PublishActivity start-->
    <string name="publishActivity_title">发布</string>
    <!--xml-->
    <string name="pub_xml_title">标题:</string>
    <string name="pub_xml_tag">标签:</string>
    <string name="pub_xml_phone">电话:</string>
    <string name="pub_xml_businessTime">营业时间:</string>
    <string name="pub_xml_address">定位中...</string>
    <string name="pub_xml_uploadText">上传文本</string>
    <string name="pub_xml_takeImg">拍  摄</string>
    <string name="pub_xml_writerFile">编辑文本</string>
    <!--PublishActivity end-->

    <!--SearchKeyResultFragment start-->
    <string name="key_search_fragment_food_title">美食:</string>
    <!--SearchKeyResultFragment end-->

    <!--dialog_choose_photo start-->
    <string name="item_choose_photo_takePhoto">拍照</string>
    <string name="item_choose_photo_choosePhoto">相册</string>

    <!--Mine Behavior Start-->
    <string name="behavior_simple_title">com.example.hekai.xunw.utils.SimpleTitleBehavior</string>
    <string name="behavior_bottom_bar">com.example.hekai.xunw.utils.BottomBarBehavior</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_person_center">PersonCenterActivity</string>
    <string name="title_activity_publish">PublishActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>
