<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PublishActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="5dp">
                <!--title-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/pub_xml_title" />

                    <EditText
                        android:id="@+id/et_publish_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7" />
                </LinearLayout>

                <include layout="@layout/line" />

                <!--phone-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/pub_xml_phone" />

                    <EditText
                        android:id="@+id/et_pub_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:layout_weight="7" />
                </LinearLayout>

                <include layout="@layout/line" />

                <!--businessTime-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/pub_xml_businessTime" />

                    <EditText
                        android:id="@+id/et_pub_businessTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7" />
                </LinearLayout>

                <include layout="@layout/line" />

                <!--tag-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/pub_xml_tag" />

                    <EditText
                        android:id="@+id/et_pub_tag"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7" />
                </LinearLayout>

                <include layout="@layout/line" />

                <!--address-->
                <RelativeLayout
                    android:id="@+id/pub_layout_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/pub_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:text="@string/pub_xml_address" />

                    <ImageView
                        android:id="@+id/pub_location_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_location_on_black_24dp" />
                </RelativeLayout>


                <include layout="@layout/line" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                     >
                    <LinearLayout
                        android:id="@+id/pub_layout_images"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content"/>
                </HorizontalScrollView>
                <LinearLayout
                    android:id="@+id/pub_layout_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <!--photo-->
                    <RelativeLayout
                        android:id="@+id/pub_takePhoto_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/pub_takePhoto"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/light_grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_image_black_24dp" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pub_takePhoto"
                            android:gravity="center"

                            android:text="@string/pub_xml_takeImg" />
                    </RelativeLayout>

                    <!--编辑文本-->
                    <RelativeLayout
                        android:id="@+id/pub_layout_writerFile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/pub_icon_writerFile"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/light_grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_writer_file_24dp" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/pub_icon_writerFile"
                            android:gravity="center"
                            android:text="@string/pub_xml_writerFile" />
                    </RelativeLayout>
                </LinearLayout>

                <include layout="@layout/line" />
                <TextView
                    android:id="@+id/tev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="false"
        android:layout_centerInParent="true" />
</android.support.design.widget.CoordinatorLayout>