<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.DelicacyDetailsActivity">

    <!--<android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">-->

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/blue"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/delicacy_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_delicacy"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                app:layout_behavior="@string/behavior_simple_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <!--作者-->
                        <TextView
                            android:id="@+id/tv_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <!--时间-->
                        <TextView
                            android:id="@+id/tv_createTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <!--电话-->
                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <!--营业时间-->
                        <TextView
                            android:id="@+id/tv_businessTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <!--距离-->
                        <TextView
                            android:id="@+id/tv_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/layout_map"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:background="@color/light_grey" />
                </LinearLayout>
                <!--地址-->
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--富文本输出框-->
                <TextView
                    android:id="@+id/tv_richText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!--评论功能-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="评论:"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <View
                        android:id="@+id/comment_line"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/text_comment"
                        android:layout_marginTop="5dp"
                        android:background="@color/light_grey" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/comment_recycleView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/comment_line" />
                </RelativeLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/delicacy_bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_behavior="@string/behavior_bottom_bar"
            app:layout_anchor="@id/nestScrollView"
            app:layout_anchorGravity="bottom|end|left"
            >
            <!--推荐-->
            <TextView
                android:id="@+id/bottom_toolbar_recommend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_recommended_24dp"
                android:gravity="center"
                android:text="@string/delicacy_bottom_toolbar_recommend" />
            <!--收藏-->
            <TextView
                android:id="@+id/bottom_toolbar_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_collection_24dp"
                android:gravity="center"
                android:text="@string/delicacy_bottom_toolbar_collection" />
            <!--评论-->
            <TextView
                android:id="@+id/bottom_toolbar_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_comment_24dp"
                android:gravity="center"
                android:text="@string/delicacy_bottom_toolbar_comment" />
            <!--分享-->
            <TextView
                android:id="@+id/bottom_toolbar_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_share_24dp"
                android:gravity="center"
                android:text="@string/delicacy_bottom_toolbar_share" />
        </LinearLayout>

    <!--</android.support.design.widget.CoordinatorLayout>-->

    <!--底部工具栏-->
    <!--<LinearLayout
        android:id="@+id/delicacy_bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">
        &lt;!&ndash;推荐&ndash;&gt;
        <TextView
            android:id="@+id/bottom_toolbar_recommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_recommended_24dp"
            android:gravity="center"
            android:text="@string/delicacy_bottom_toolbar_recommend" />
        &lt;!&ndash;收藏&ndash;&gt;
        <TextView
            android:id="@+id/bottom_toolbar_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_collection_24dp"
            android:gravity="center"
            android:text="@string/delicacy_bottom_toolbar_collection" />
        &lt;!&ndash;评论&ndash;&gt;
        <TextView
            android:id="@+id/bottom_toolbar_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_comment_24dp"
            android:gravity="center"
            android:text="@string/delicacy_bottom_toolbar_comment" />
        &lt;!&ndash;分享&ndash;&gt;
        <TextView
            android:id="@+id/bottom_toolbar_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_24dp"
            android:gravity="center"
            android:text="@string/delicacy_bottom_toolbar_share" />
    </LinearLayout>
-->
</android.support.design.widget.CoordinatorLayout>